--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -27,6 +27,7 @@ jobs:
     - run: npm ci
     - name : Install dependencies
       run: npm install
+    - run: npm install -g pm2
     - name: Build Stage
       run: npm run build --if-present
     - name: Test Stage
